--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-loader-spinner": "^6.1.6",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
